--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ ul{
 
 
 
-.article {
-    grid-column: 2 / 3;
-}
+
+/* /////////////////////////Header//////////////////// */
+
 .header {
     display: grid;
     grid-template-columns: 1fr 2fr ;
@@ -106,12 +106,15 @@ ul{
 
 }
 
+    /* /////////////////////////sideBar//////////////////// */
+
 .sideBar {
-    grid-column: 1;
+     grid-column: 1;
     grid-row: 1 / -4;
     display: grid;
     background-color: #64748b;
-    grid-template-rows: 2fr 4fr;
+    border-radius: 10%;
+    grid-template-rows: minmax(250px, 2fr) minmax(500px,4fr);
     gap: 50px;
     
 }
@@ -120,7 +123,7 @@ ul{
     display: flex;
     flex-direction: column;
     grid-row: 1 / 2;
-    padding: 15px
+    padding: 15px;
 
 
 
@@ -128,8 +131,8 @@ ul{
 .dashHome img{
 
     border-radius: 50%;
+    
     height: 200px;
-    width: 150px;
     border: 3px solid black;
 
 
@@ -179,3 +182,20 @@ ul{
 
 
 }
+
+/* /////////////////////////sideBar//////////////////// */
+
+
+.article {
+    grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    background-color: grey;
+} 
+
+.article .tile{
+
+    height: 250px;
+
+}
+
